--- a/.github/workflows/main_kaofood.yml
+++ b/.github/workflows/main_kaofood.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: node-app
-        path: ./dist
+        path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,5 +52,5 @@ jobs:
       with:
         app-name: 'kaofood'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_9aba63236707458e8706fac4d2000e8f }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_a41eaa19c37a41f186dcff9655097ef6 }}
         package: .
