--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,6 @@ server {
 
  location ^~ /api/ {
     rewrite ^/api(.*) /$1 break;
-    proxy_pass http://back-end:8080;
+    proxy_pass http://backend:8080;
  }
 }
