--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,22 @@
 #Redirect Http to Https
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _;
-    return 301 https://$host$request_uri;
+    listen        80 default_server;
+    listen  [::]:80  default_server;
+    listen       443 default_server;
+    listen  [::]:443 default_server;
+    server_name "";
+    return 301 https://kaofood.ddns.net$request_uri;
 }
 
 server { 
-    listen       443;
-    listen  [::]:443;
+    listen       443 default_server;
+    listen  [::]:443 default_server;
 
     ssl                  on;
     ssl_certificate      /etc/ssl/certificate.crt; 
     ssl_certificate_key  /etc/ssl/private.key;
 
-    server_name frontend;
+    server_name "https://kaofood.ddns.net";
  
  location / {
    root /usr/share/nginx/html;
