--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 #Redirect Http to Https
 server {
     listen        80 default_server;
-    listen  [::]:80  default_server;
-    listen       443 default_server;
-    listen  [::]:443 default_server;
+    listen   [::]:80 default_server;
+    listen       443;
+    listen  [::]:443;
     server_name "";
     return 301 https://kaofood.ddns.net$request_uri;
 }
