--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,21 +9,21 @@ server {
 server { 
     listen       443 default_server;
     listen  [::]:443 default_server;
-
+    if ($host != "kaofood.ddns.net") {
+          return 444;
+    }
+    server_name "https://kaofood.ddns.net";
     ssl                  on;
     ssl_certificate      /etc/ssl/certificate.crt; 
     ssl_certificate_key  /etc/ssl/private.key;
 
-    server_name "https://kaofood.ddns.net";
- 
- location / {
-   root /usr/share/nginx/html;
-   try_files $uri /index.html;
- }
- 
+  location / {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
 
- location ^~ /api/ {
+  location ^~ /api/ {
     rewrite ^/api(.*) /$1 break;
     proxy_pass http://backend:8080;
- }
+  }
 }
