--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ocrv/vue-tailwind-pagination": "^0.0.4",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "daisyui": "^1.11.1",
     "postcss": "^7",
