--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@ocrv/vue-tailwind-pagination": "^0.0.4",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
-    "axios": "^0.21.3",
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "daisyui": "^1.11.1",
     "postcss": "^7",
+    "tailwind": "^4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
