--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,16 +3,16 @@ server {
     listen        80 default_server;
     listen   [::]:80 default_server;
     server_name "";
-    return 301 https://kaofood.ddns.net$request_uri;
+    return 301 https://kaofood.works$request_uri;
 }
 
 server { 
     listen       443 default_server;
     listen  [::]:443 default_server;
-    if ($host != "kaofood.ddns.net") {
+    if ($host != "kaofood.works") {
           return 444;
     }
-    server_name "https://kaofood.ddns.net";
+    server_name "https://kaofood.works";
     ssl                  on;
     ssl_certificate      /etc/ssl/certificate.crt; 
     ssl_certificate_key  /etc/ssl/private.key;
