--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "backend": "json‐server ‐‐watch db.json ‐‐port 5000"
   },
   "dependencies": {
-    "@ocrv/vue-tailwind-pagination": "^0.0.4",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "daisyui": "^1.11.1",
+    "@ocrv/vue-tailwind-pagination": "^0.0.4",
     "postcss": "^7",
     "tailwind": "^4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "vue-cli-plugin-tailwind": "~2.0.6"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "vue-cli-plugin-tailwind": "~2.0.6",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0"
   }
 }
