--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
     server_name "https://kaofood.works";
     ssl                  on;
-    ssl_certificate      /etc/ssl/certificate.crt; 
+    ssl_certificate      /etc/ssl/certificate.pem;
     ssl_certificate_key  /etc/ssl/private.key;
 
   location / {
