--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,9 @@ server {
     ssl_certificate      /etc/ssl/certificate.pem;
     ssl_certificate_key  /etc/ssl/private.key;
 
+    ssl_verify_client on;
+    ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
+
   location / {
     root /usr/share/nginx/html;
     try_files $uri /index.html;
