--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,11 +6,10 @@ server {
     }
     server_name "https://kaofood.works";
     ssl                  on;
+    ssl_verify_client on;
     ssl_certificate      /etc/ssl/certificate.pem;
     ssl_certificate_key  /etc/ssl/private.key;
-
-    ssl_verify_client on;
-    ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
+    ssl_client_certificate /etc/ssl/cloudflare.crt;
 
   location / {
     root /usr/share/nginx/html;
