--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
     ssl_verify_client on;
     ssl_certificate      /etc/ssl/certificate.pem;
     ssl_certificate_key  /etc/ssl/private.key;
-    ssl_client_certificate /etc/ssl/cloudflare.crt;
+    ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
 
   location / {
     root /usr/share/nginx/html;
