--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,5 +21,9 @@ server {
     proxy_pass http://backend:8080;
   }
 
-  error_page 405 =200 /index.html
+  error_page 405 =200 @405;
+   location @405 {
+     proxy_method GET;
+     proxy_pass https://kaofood.works;
+   }
 }
