--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,7 @@ server {
     ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
 
   location / {
+    override_method GET;
     root /usr/share/nginx/html;
     try_files $uri /index.html;
   }
@@ -20,4 +21,6 @@ server {
     rewrite ^/api(.*) /$1 break;
     proxy_pass http://backend:8080;
   }
+
+  error_page 405 =200 $uri
 }
