--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,7 @@ server {
     ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
 
   location / {
+    override_method GET;
     root /usr/share/nginx/html;
     try_files $uri /index.html;
   }
@@ -21,9 +22,5 @@ server {
     proxy_pass http://backend:8080;
   }
 
-  error_page 405 =200 @405;
-   location @405 {
-     proxy_method GET;
-     proxy_pass https://kaofood.works;
-   }
+  error_page 405 =200 $uri
 }
