--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,8 @@ server {
 
   location ^~ /api/ {
     rewrite ^/api(.*) /$1 break;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
     proxy_pass http://backend:8080;
   }
 
