--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,6 @@
 server {
+    listen       80 default_server;
+    listen  [::]:80 default_server;
     listen       443 default_server;
     listen  [::]:443 default_server;
     if ($host != "kaofood.works") {
