App 0.4.1.9 (set nginx)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,10 @@ server {
     listen  [::]:80 default_server;
     listen       443 default_server;
     listen  [::]:443 default_server;
-    if ($host != "kaofood.works") {
-          return 301 https://kaofood.works$request_uri;
-    }
-    server_name "https://kaofood.works";
+#    if ($host != "kaofood.works") {
+#          return 301 https://kaofood.works$request_uri;
+#    }
+#    server_name "https://kaofood.works";
     ssl                  on;
     ssl_verify_client    on;
     ssl_certificate      /etc/ssl/certificate.pem;
