--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,33 @@
 server {
     listen       80 default_server;
     listen  [::]:80 default_server;
+    server_name "http://kaofood.works";
+
+  location / {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
+
+  location ^~ /api/ {
+    rewrite ^/api(.*) /$1 break;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_pass http://backend:8080;
+  }
+
+}
+server {
     listen       443 default_server;
     listen  [::]:443 default_server;
-#    if ($host != "kaofood.works") {
-#          return 301 https://kaofood.works$request_uri;
-#    }
-#    server_name "https://kaofood.works";
+    if ($host != "kaofood.works") {
+          return 301 https://kaofood.works$request_uri;
+    }
+    server_name "https://kaofood.works";
     ssl                  on;
-#    ssl_verify_client    on;
+    ssl_verify_client    on;
     ssl_certificate      /etc/ssl/certificate.pem;
     ssl_certificate_key  /etc/ssl/private.key;
-#    ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
+    ssl_client_certificate /etc/nginx/certs/cloudflare.crt;
 
   location / {
     root /usr/share/nginx/html;
