--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,30 @@
 server {
     listen       443 default_server;
     listen  [::]:443 default_server;
+
+    server_name "dev.kaofood.works";
+    ssl                  on;
+    ssl_certificate      /etc/ssl/certificate.pem;
+    ssl_certificate_key  /etc/ssl/private.key;
+
+  location / {
+    proxy_pass http://dev-web;
+  }
+
+  location ^~ /api/ {
+    rewrite ^/api(.*) /$1 break;
+    proxy_pass http://backend:8080;
+  }
+
+}
+
+server {
+    listen       443 default_server;
+    listen  [::]:443 default_server;
     if ($host != "kaofood.works") {
           return 301 https://kaofood.works$request_uri;
     }
-    server_name "https://kaofood.works";
+    server_name "kaofood.works";
     ssl                  on;
     ssl_verify_client    on;
     ssl_certificate      /etc/ssl/certificate.pem;
