--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen       443 default_server;
     listen  [::]:443 default_server;
 
-    server_name "dev.kaofood.works";
+    server_name dev.kaofood.works;
     ssl                  on;
     ssl_certificate      /etc/ssl/certificate.pem;
     ssl_certificate_key  /etc/ssl/private.key;
@@ -19,12 +19,24 @@ server {
 }
 
 server {
+    listen       80 default_server;
+    listen  [::]:80 default_server;
+
+    server_name dev-web;
+
+  location / {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
+}
+
+server {
     listen       443 default_server;
     listen  [::]:443 default_server;
     if ($host != "kaofood.works") {
           return 301 https://kaofood.works$request_uri;
     }
-    server_name "kaofood.works";
+    server_name kaofood.works;
     ssl                  on;
     ssl_verify_client    on;
     ssl_certificate      /etc/ssl/certificate.pem;
