--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,38 +1,6 @@
 server {
     listen       443 default_server;
     listen  [::]:443 default_server;
-
-    server_name dev.kaofood.works;
-    ssl                  on;
-    ssl_certificate      /etc/ssl/certificate.pem;
-    ssl_certificate_key  /etc/ssl/private.key;
-
-  location / {
-    proxy_pass http://dev-web;
-  }
-
-  location ^~ /api/ {
-    rewrite ^/api(.*) /$1 break;
-    proxy_pass http://backend:8080;
-  }
-
-}
-
-server {
-    listen       80 default_server;
-    listen  [::]:80 default_server;
-
-    server_name dev-web;
-
-  location / {
-    root /usr/share/nginx/html;
-    try_files $uri /index.html;
-  }
-}
-
-server {
-    listen       443 default_server;
-    listen  [::]:443 default_server;
     if ($host != "kaofood.works") {
           return 301 https://kaofood.works$request_uri;
     }
@@ -54,5 +22,36 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_pass http://backend:8080;
   }
+}
 
+server {
+    listen       443;
+    listen  [::]:443;
+
+    server_name dev.kaofood.works;
+    ssl                  on;
+    ssl_certificate      /etc/ssl/certificate.pem;
+    ssl_certificate_key  /etc/ssl/private.key;
+
+  location / {
+    proxy_pass http://dev-web;
+  }
+
+  location ^~ /api/ {
+    rewrite ^/api(.*) /$1 break;
+    proxy_pass http://backend:8080;
+  }
+
+}
+
+server {
+    listen       80;
+    listen  [::]:80;
+
+    server_name dev-web;
+
+  location / {
+    root /usr/share/nginx/html;
+    try_files $uri /index.html;
+  }
 }
