--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+# main web server
 server {
     listen       443 default_server;
     listen  [::]:443 default_server;
@@ -23,7 +24,7 @@ server {
     proxy_pass http://backend:8080;
   }
 }
-
+#main web server dev domain
 server {
     listen       443;
     listen  [::]:443;
@@ -39,11 +40,11 @@ server {
 
   location ^~ /api/ {
     rewrite ^/api(.*) /$1 break;
-    proxy_pass http://backend:8080;
+    proxy_pass http://dev-backend:8080;
   }
 
 }
-
+#dev web server
 server {
     listen       80;
     listen  [::]:80;
