--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,7 +18,7 @@ server {
   }
 
   location ^~ /api/ {
-    rewrite ^/api(.*) /$1 break;
+    rewrite ^/api/(.*) /$1 break;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_pass http://backend:8080;
@@ -39,7 +39,7 @@ server {
   }
 
   location ^~ /api/ {
-    rewrite ^/api(.*) /$1 break;
+    rewrite ^/api/(.*) /$1 break;
     proxy_pass http://dev-backend:8080;
   }
 
